# blotter

./: .gitignore  README.md  architecture.mmd
.github/workflows/: deploy.yml
backend/: .env.example  .env.gpu  Dockerfile  Dockerfile.gpu  pyproject.toml
backend/config/: whisper_prompt.txt
backend/config/prompts/: 20296.txt  24051.txt  25187.txt  26569.txt  40488.txt  apsp25.txt  bacop25.txt  chi_cpd.txt  cltp25.txt  dane_com.txt  dcfd.txt  default.txt  gcrn.txt  indydps.txt  lapdvalley.txt  lapdwest.txt  mcbsimcast.txt  mnhennco.txt  monroecony.txt  njicsunion.txt  ntirnd1.txt  nwhc.txt  pdx2.txt  pgcomd.txt  philly.txt  psern1.txt  sc21102.txt  scpd.txt  sfp25.txt  snacc.txt
backend/scripts/: process_test_audio.py  test_e2e.py  test_local.py
backend/src/blotter/: api.py  cli.py  config.py  db.py  gcs.py  log.py  models.py  queue.py  scc_data.py
backend/src/blotter/stages/: capture.py  capture_openmhz.py  download.py  embed.py  extract.py  extract_codes.py  extract_nlp.py  fetch.py  geocode.py  ingest.py  stream_transcribe.py  summarize.py  transcribe.py  worker.py
backend/tests/unit/: test_config.py  test_extract.py  test_models.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  wrangler.toml
frontend/functions/api/: [[path]].ts  health.ts  query.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AboutModal.tsx  EventPanel.tsx  Map.tsx  SearchBox.tsx  Tags.tsx  TimeSlider.tsx  TranscriptList.tsx  TranscriptPanel.tsx  TranscriptPlayer.tsx
frontend/src/lib/: api.ts  parseTimeFilter.ts  types.ts
frontend/tests/e2e/: app.spec.ts
infra/: docker-compose.yml  restart_prod.sh
infra/caddy/: Caddyfile
infra/clickhouse/: init.sql  users.xml
infra/clickhouse/config.d/: logging.xml  memory.xml  system_logs.xml
infra/clickhouse/migrations/: 001_add_segments.sql  002_add_window_id.sql  003_add_embedding.sql  004_add_summary.sql  005_separate_embeddings.sql
infra/cloudflared/: config.yml
infra/monitoring/: check_disk.sh  check_ffmpeg.sh  check_memory.sh  check_procs.sh  check_queues.sh  check_resources.sh  check_services.sh  check_throughput.sh  crontab  daily_summary.sh  heartbeat.sh  monitoring_loop.sh
infra/postgres/: init.sql  pg_dump.sh  pg_restore.sh
infra/runpod/: setup.sh
infra/staging-proxy/: index.ts  wrangler.toml
infra/supervisord/: supervisord.conf
