[project]
name = "blotter"
version = "0.1.0"
description = "Police scanner archive search and map"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "httpx>=0.28",
    "tenacity>=9.0",
    "clickhouse-connect>=0.8",
    "geopy>=2.4",
    "shapely>=2.0",
    "usaddress>=0.5",
    "spacy>=3.8",
    "faster-whisper>=1.1",
    "pydub>=0.25",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[project.scripts]
blotter = "blotter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blotter"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "strict"
