[project]
name = "blotter"
version = "0.1.0"
description = "Police scanner archive search and map"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "httpx>=0.28",
    "psycopg[binary]>=3.1",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "shapely>=2.0",
    "faster-whisper>=1.1",
    "pydub>=0.25",
    "google-cloud-storage>=2.18",
    "redis>=5.0",
    "sentence-transformers>=3.0",
    "playwright-stealth>=2.0",
    "curl_cffi>=0.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pyright>=1.1",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[project.scripts]
blotter = "blotter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blotter"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "strict"
